--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "findres",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://modangirlbin.github.io/study/",
+  "homepage": "https://modangirlbin.github.io/res_test/",
   "dependencies": {
     "@babel/core": "7.1.0",
     "@material-ui/core": "^3.3.2",
@@ -68,7 +68,7 @@
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js",
-    "deploy" : "npm run build&&gh-pages -d build"
+    "deploy": "npm run build&&gh-pages -d build"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -125,5 +125,8 @@
       "react-app",
       "mobx"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^2.0.1"
   }
 }
